# trollup

./: .gitignore  Cargo.toml  Dockerfile-api  Dockerfile-validator  README.md  brain_dump.md  docker-compose.yml
api/: Cargo.toml  Dockerfile  README.md
api/config/dev/: trollup-api-config.json
api/config/local/: api.json  trollup-api-config.json
api/src/: account_handler.rs  block_handler.rs  config.rs  handler.rs  lib.rs  main.rs  optimistic_handler.rs  transaction_handler.rs
example/: Cargo.toml  README.md
example/config/local/: trollup-api-config.json
example/src/: main.rs  main_old.rs
execution/: Cargo.toml  README.md  execution_engine.md
execution/src/: execution_engine.rs  lib.rs  processor.rs  transaction_pool.rs
merkle/: Cargo.toml
merkle/src/: lib.rs  merkle_proof.rs  merkle_tree.rs
state/: Cargo.toml  README.md
state/src/: account_state.rs  block.rs  config.rs  lib.rs  state_record.rs  transaction.rs
state_commitment/: Cargo.toml  README.md
state_commitment/src/: lib.rs  state_commitment_layer.rs  state_commitment_pool.rs  validator_client.rs
state_management/: Cargo.toml
state_management/src/: account_loader.rs  lib.rs  sled_state_management.rs  state_management.rs
swagger/: api.yml
trollup-solana-programs/: Cargo.toml  README.md
trollup-solana-programs/initialize-programs/: Cargo.toml
trollup-solana-programs/initialize-programs/src/: main.rs
trollup-solana-programs/proof-verify/: Cargo.toml  README.md
trollup-solana-programs/proof-verify/src/: lib.rs
trollup-solana-programs/src/: lib.rs
trollup-solana-programs/validator-signature-verify/: Cargo.toml  README.md
trollup-solana-programs/validator-signature-verify/src/: lib.rs
validator/: .dockerignore  Cargo.toml  Dockerfile  README.md
validator/config/docker/: trollup-api-config.json
validator/config/local/: keypair.json  trollup-api-config.json
validator/src/: commitment.rs  config.rs  error.rs  handler.rs  lib.rs  main.rs  models.rs
zk/: Cargo.toml  README.md
zk/src/: account_state_circuit.rs  byte_utils.rs  errors.rs  example.rs  lib.rs  prove.rs  verify.rs  verify_lite.rs
