[package]
name = "trollup-api"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
solana-sdk = "=2.0.5"
anyhow = "1.0.86"
log = "0.4.22"
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.15"
reqwest = "0.11.27"
warp = "0.3.7"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9.33"
env_logger = "0.11.5"
utoipa = {version = "4.2.3"}
utoipa-swagger-ui = "5.0.0"
utoipa-gen = {version = "4.3.1"}
lazy_static = "1.5.0"
sha2 = "0.10.8"
state = {path = "../state"}
state_commitment = {path = "../state_commitment" }
state_management = {path = "../state_management" }
execution = {path = "../execution"}
base64 = "0.22.1"
