[package]
name = "trollup-example"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=2.0.5"
solana-sdk = "=2.0.5"
solana-logger = "=2.0.5"
solana-client = "=2.0.5"
borsh = "1.5.1"
borsh-derive = "1.5.1"
tokio = "1.39.3"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"
state = {path = "../state" }
state_commitment = {path = "../state_commitment"}
state_management = {path = "../state_management"}
trollup-zk = {path = "../zk"}
execution = {path = "../execution"}
log = "0.4.22"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0"
lazy_static = "1.5.0"