[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-bpf-loader-program = "=2.0.5"
solana_rbpf = "0.8.3"
solana-client = "=2.0.5"
solana-compute-budget = "=2.0.5"
solana-program-runtime = "=2.0.5"
solana-sdk = "=2.0.5"
solana-svm = "=2.0.5"
solana-system-program = "=2.0.5"
solana-logger = "=2.0.5"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
sled = "0.34"
borsh = {version = "1.2.1", features = ["derive"]}
state = {path = "../state"}
state_commitment = {path = "../state_commitment"}
state_management = {path = "../state_management" }
tokio = "1.40.0"
log = "0.4.22"
lazy_static = "1.5.0"

[lib]
doctest = false