[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.8"
sled = "0.34"
borsh = {version = "1.2.1", features = ["derive"]}
state = {path = "../state"}
state_commitment = {path = "../state_commitment"}
state_management = {path = "../state_management" }
tokio = "1.40.0"

[lib]
doctest = false