[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "=2.0.5"
solana-svm = "=2.0.5"
borsh = {version = "1.2.1", features = ["derive"]}
sha2 = "0.10.8"
rand = "0.7.3"
libsecp256k1 = "0.7.1"
bincode = "1.3.3"
anyhow = "1.0.86"
serde = { version = "1.0.210", features = ["derive"] }
serde_derive = "1.0.210"
config = "0.14.0"

[lib]
doctest = false