[package]
name = "state_commitment"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.8"
solana-sdk = "2.0.8"
hex = "0.4.3"
sha2 = "0.10.8"
borsh = {version = "1.2.1", features = ["derive"]}
state = {path = "../state" }
state_management = {path = "../state_management" }
merkle = {path = "../merkle"}
rand = "0.7.3"
libsecp256k1 = "0.7.1"

[lib]
doctest = false