[package]
name = "trollup-solana-program"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
solana-program = "=2.0.8"
anyhow = "1.0.87"
sha2 = "0.10.8"
borsh = {version = "1.5.1", features = ["derive"]}
#bellman = {version = "0.14.0", features = ["pairing"]}
#bls12_381 = {version = "0.8.0"}
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.2"

[lib]
crate-type = ["cdylib", "lib"]
